VPN-gateway.tf
resource "azurerm_resource_group" "example05" {
  name     = "test05"
  location = "Chinaeast"
}

resource "azurerm_virtual_network" "example05" {
  name                = "test05"
  location            = "${azurerm_resource_group.example05.location}"
  resource_group_name = "${azurerm_resource_group.example05.name}"
  address_space       = ["10.0.0.0/16"]
}

resource "azurerm_subnet" "example05" {
  name                 = "GatewaySubnet05"
  resource_group_name  = "${azurerm_resource_group.example05.name}"
  virtual_network_name = "${azurerm_virtual_network.example05.name}"
  address_prefix       = "10.0.1.0/24"
}

resource "azurerm_public_ip" "example05" {
  name                = "test05"
  location            = "${azurerm_resource_group.example05.location}"
  resource_group_name = "${azurerm_resource_group.example05.name}"

  allocation_method = "Dynamic"
}

resource "azurerm_virtual_network_gateway" "example05" {
  name                = "test05"
  location            = "${azurerm_resource_group.example05.location}"
  resource_group_name = "${azurerm_resource_group.example05.name}"

  type     = "Vpn"
  vpn_type = "RouteBased"

  active_active = false
  enable_bgp    = false
  sku           = "Basic"

  ip_configuration {
    name                          = "vnetGatewayConfig"
    public_ip_address_id          = "${azurerm_public_ip.example05.id}"
    private_ip_address_allocation = "Dynamic"
    subnet_id                     = "${azurerm_subnet.example05.id}"
  }

  vpn_client_configuration {
    address_space = ["10.2.0.0/24"]

    root_certificate {
      name = "DigiCert-Federated-ID-Root-CA"

      public_cert_data = <<EOF
MIIDuzCCAqOgAwIBAgIQCHTZWCM+IlfFIRXIvyKSrjANBgkqhkiG9w0BAQsFADBn
[...]
EOF
    }

    revoked_certificate {
      name       = "Verizon-Global-Root-CA"
      thumbprint = "912198EEF23DCAC40939312FEE97DD560BAE49B1"
    }
  }
}
